Fixed some DmcVideoBundleSchema files

--- a/DisneyDown.Common.API/DisneyDown.Common.API.csproj
+++ b/DisneyDown.Common.API/DisneyDown.Common.API.csproj
@@ -117,54 +117,55 @@
     <Compile Include="Schemas\MediaSchemas\DmcSeriesBundleSchemaContainer\VideoText.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\Actor.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\AudioTrack.cs" />
+    <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\BackgroundDetail.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\BackgroundDetailProgram.cs" />
+    <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\BackgroundUpNext.cs" />
+    <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\Brief.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\BriefProgram.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\CharacterDetails.cs" />
+    <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\Converter.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\CurrentAvailability.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\Data.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\DmcVideoBundle.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\DmcVideoBundleSchema.cs" />
+    <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\DmcVideoBundleVideo.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\Extras.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\Facet.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\Family.cs" />
-    <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\Ffec.cs" />
-    <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\FluffyBackgroundDetail.cs" />
-    <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\FluffyBackgroundUpNext.cs" />
-    <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\FluffyBrief.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\FluffyDefault.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\FluffyDescription.cs" />
-    <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\FluffyTitle.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\Group.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\Item.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\ItemImage.cs" />
-    <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\ItemMediaRights.cs" />
+    <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\ItemMediaMetadata.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\ItemText.cs" />
+    <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\MediaRights.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\Meta.cs" />
-    <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\Milestone.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\MilestoneTime.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\Param.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\ParentRef.cs" />
+    <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\ParseStringConverter.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\Participant.cs" />
+    <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\ParticipantClass.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\PlaybackUrl.cs" />
-    <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\PurpleBackgroundDetail.cs" />
-    <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\PurpleBackgroundUpNext.cs" />
-    <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\PurpleBrief.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\PurpleDefault.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\PurpleDescription.cs" />
-    <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\PurpleTitle.cs" />
+    <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\PurpleImage.cs" />
+    <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\PurpleMilestone.cs" />
+    <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\PurpleText.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\Rating.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\Related.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\Release.cs" />
+    <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\Serialize.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\Tag.cs" />
+    <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\Title.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\TypedGenre.cs" />
+    <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\UpNext.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\Url.cs" />
-    <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\Video.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\VideoArt.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\VideoArtMediaMetadata.cs" />
-    <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\VideoImage.cs" />
+    <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\VideoElement.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\VideoMediaMetadata.cs" />
-    <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\VideoMediaRights.cs" />
-    <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\VideoText.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoSchemaContainer\AudioTrack.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoSchemaContainer\CharacterDetails.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoSchemaContainer\CurrentAvailability.cs" />
