Fully-functional API; playlist retrieval is possible

--- a/DisneyDown.Common.API/DisneyDown.Common.API.csproj
+++ b/DisneyDown.Common.API/DisneyDown.Common.API.csproj
@@ -123,7 +123,6 @@
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\Brief.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\BriefProgram.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\CharacterDetails.cs" />
-    <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\Converter.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\CurrentAvailability.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\Data.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\DmcVideoBundle.cs" />
@@ -190,28 +189,24 @@
     <Compile Include="Schemas\MediaSchemas\DmcVideoSchemaContainer\Tag.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoSchemaContainer\Text.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoSchemaContainer\Video.cs" />
+    <Compile Include="Schemas\MediaSchemas\PlaybackScenarioSchemaContainer\AdEngine.cs" />
     <Compile Include="Schemas\MediaSchemas\PlaybackScenarioSchemaContainer\Attributes.cs" />
     <Compile Include="Schemas\MediaSchemas\PlaybackScenarioSchemaContainer\Audio.cs" />
     <Compile Include="Schemas\MediaSchemas\PlaybackScenarioSchemaContainer\Bif.cs" />
-    <Compile Include="Schemas\MediaSchemas\PlaybackScenarioSchemaContainer\Complete.cs" />
-    <Compile Include="Schemas\MediaSchemas\PlaybackScenarioSchemaContainer\CompleteTracking.cs" />
-    <Compile Include="Schemas\MediaSchemas\PlaybackScenarioSchemaContainer\FluffyAdEngine.cs" />
-    <Compile Include="Schemas\MediaSchemas\PlaybackScenarioSchemaContainer\FluffyConviva.cs" />
-    <Compile Include="Schemas\MediaSchemas\PlaybackScenarioSchemaContainer\FluffyQos.cs" />
-    <Compile Include="Schemas\MediaSchemas\PlaybackScenarioSchemaContainer\FluffyTelemetry.cs" />
+    <Compile Include="Schemas\MediaSchemas\PlaybackScenarioSchemaContainer\Conviva.cs" />
     <Compile Include="Schemas\MediaSchemas\PlaybackScenarioSchemaContainer\Headers.cs" />
+    <Compile Include="Schemas\MediaSchemas\PlaybackScenarioSchemaContainer\ParseStringConverter.cs" />
     <Compile Include="Schemas\MediaSchemas\PlaybackScenarioSchemaContainer\PlaybackScenarioSchema.cs" />
-    <Compile Include="Schemas\MediaSchemas\PlaybackScenarioSchemaContainer\PlaybackScenarioSchemaTracking.cs" />
     <Compile Include="Schemas\MediaSchemas\PlaybackScenarioSchemaContainer\Playhead.cs" />
-    <Compile Include="Schemas\MediaSchemas\PlaybackScenarioSchemaContainer\PurpleAdEngine.cs" />
-    <Compile Include="Schemas\MediaSchemas\PlaybackScenarioSchemaContainer\PurpleConviva.cs" />
-    <Compile Include="Schemas\MediaSchemas\PlaybackScenarioSchemaContainer\PurpleQos.cs" />
-    <Compile Include="Schemas\MediaSchemas\PlaybackScenarioSchemaContainer\PurpleTelemetry.cs" />
+    <Compile Include="Schemas\MediaSchemas\PlaybackScenarioSchemaContainer\Qos.cs" />
     <Compile Include="Schemas\MediaSchemas\PlaybackScenarioSchemaContainer\Renditions.cs" />
     <Compile Include="Schemas\MediaSchemas\PlaybackScenarioSchemaContainer\Security.cs" />
+    <Compile Include="Schemas\MediaSchemas\PlaybackScenarioSchemaContainer\Serialize.cs" />
     <Compile Include="Schemas\MediaSchemas\PlaybackScenarioSchemaContainer\Stream.cs" />
     <Compile Include="Schemas\MediaSchemas\PlaybackScenarioSchemaContainer\Subtitle.cs" />
+    <Compile Include="Schemas\MediaSchemas\PlaybackScenarioSchemaContainer\Telemetry.cs" />
     <Compile Include="Schemas\MediaSchemas\PlaybackScenarioSchemaContainer\Thumbnails.cs" />
+    <Compile Include="Schemas\MediaSchemas\PlaybackScenarioSchemaContainer\Tracking.cs" />
     <Compile Include="Schemas\MediaSchemas\PlaybackScenarioSchemaContainer\Variant.cs" />
     <Compile Include="Schemas\ServicesSchema\Account.cs" />
     <Compile Include="Schemas\ServicesSchema\AccountClient.cs" />
