--- a/DisneyDown.Common.API/packages.config
+++ b/DisneyDown.Common.API/packages.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.14.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Logging" version="6.14.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Tokens" version="6.14.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
-  <package id="RestSharp" version="106.12.0" targetFramework="net472" />
-  <package id="RestSharp.Serializers.NewtonsoftJson" version="106.12.0" targetFramework="net472" />
+  <package id="RestSharp" version="106.13.0" targetFramework="net472" />
+  <package id="RestSharp.Serializers.NewtonsoftJson" version="106.13.0" targetFramework="net472" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="6.14.0" targetFramework="net472" />
 </packages>
