[BREAKING CHANGE] Fully implemented automatic manifest retrieval, however there are some concerns regarding how the system seems to produce decrypted files that don't specify correct durations. FFMpeg seems to fix it for now, but this shouldn't be happening at all.

--- a/DisneyDown.Common.API/DisneyDown.Common.API.csproj
+++ b/DisneyDown.Common.API/DisneyDown.Common.API.csproj
@@ -181,14 +181,21 @@
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\VideoArtMediaMetadata.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\VideoElement.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoBundleSchemaContainer\VideoMediaMetadata.cs" />
+    <Compile Include="Schemas\MediaSchemas\DmcVideoSchemaContainer\Actor.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoSchemaContainer\AudioTrack.cs" />
+    <Compile Include="Schemas\MediaSchemas\DmcVideoSchemaContainer\Background.cs" />
+    <Compile Include="Schemas\MediaSchemas\DmcVideoSchemaContainer\BackgroundUpNext.cs" />
+    <Compile Include="Schemas\MediaSchemas\DmcVideoSchemaContainer\BackgroundUpNext178.cs" />
+    <Compile Include="Schemas\MediaSchemas\DmcVideoSchemaContainer\Brief.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoSchemaContainer\CharacterDetails.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoSchemaContainer\CurrentAvailability.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoSchemaContainer\Data.cs" />
+    <Compile Include="Schemas\MediaSchemas\DmcVideoSchemaContainer\Description.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoSchemaContainer\DmcVideo.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoSchemaContainer\DmcVideoSchema.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoSchemaContainer\Facet.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoSchemaContainer\Family.cs" />
+    <Compile Include="Schemas\MediaSchemas\DmcVideoSchemaContainer\Ffec.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoSchemaContainer\Group.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoSchemaContainer\Image.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoSchemaContainer\MediaMetadata.cs" />
@@ -200,10 +207,19 @@
     <Compile Include="Schemas\MediaSchemas\DmcVideoSchemaContainer\ParseStringConverter.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoSchemaContainer\Participant.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoSchemaContainer\PlaybackUrl.cs" />
+    <Compile Include="Schemas\MediaSchemas\DmcVideoSchemaContainer\Program.cs" />
+    <Compile Include="Schemas\MediaSchemas\DmcVideoSchemaContainer\PurpleDefault.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoSchemaContainer\Rating.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoSchemaContainer\Release.cs" />
+    <Compile Include="Schemas\MediaSchemas\DmcVideoSchemaContainer\SeasonDefault.cs" />
+    <Compile Include="Schemas\MediaSchemas\DmcVideoSchemaContainer\Series.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoSchemaContainer\Tag.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoSchemaContainer\Text.cs" />
+    <Compile Include="Schemas\MediaSchemas\DmcVideoSchemaContainer\The178_Value.cs" />
+    <Compile Include="Schemas\MediaSchemas\DmcVideoSchemaContainer\Thumbnail.cs" />
+    <Compile Include="Schemas\MediaSchemas\DmcVideoSchemaContainer\Thumbnail178.cs" />
+    <Compile Include="Schemas\MediaSchemas\DmcVideoSchemaContainer\Title.cs" />
+    <Compile Include="Schemas\MediaSchemas\DmcVideoSchemaContainer\TitleTreatmentMono.cs" />
     <Compile Include="Schemas\MediaSchemas\DmcVideoSchemaContainer\Video.cs" />
     <Compile Include="Schemas\MediaSchemas\PlaybackScenarioSchemaContainer\AdEngine.cs" />
     <Compile Include="Schemas\MediaSchemas\PlaybackScenarioSchemaContainer\Attributes.cs" />
@@ -356,6 +372,7 @@
     <Compile Include="Structures\ApiDevice\ApiDeviceId.cs" />
     <Compile Include="Schemas\AuthenticationSchemas\TokenGrantResponse.cs" />
     <Compile Include="Structures\ApiDevice\ApiDeviceTokenStorage.cs" />
+    <Compile Include="Structures\MediaInformation.cs" />
     <Compile Include="Structures\RequestPayloads\DeviceGrantRequestPayload.cs" />
     <Compile Include="Structures\RequestPayloads\TokenExchangeRequestPayload.cs" />
     <Compile Include="TokenConversion.cs" />
