--- a/DisneyDown.Common/DisneyDown.Common.csproj
+++ b/DisneyDown.Common/DisneyDown.Common.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Globals\FilterValues\FilterValuesAuxiliary.cs" />
     <Compile Include="Globals\FilterValues\FilterValuesItemEntry.cs" />
     <Compile Include="Util\Converter.cs" />
     <Compile Include="Extensions\DataTableConversion.cs" />
