Implemented individual file checksums and modified the processing flow so video goes first; key ID is checked in video stage which is a point of failure. It is critical that this check succeeds before the other processors start.

--- a/DisneyDown.Common.ExternalRetrieval/DisneyDown.Common.ExternalRetrieval.csproj
+++ b/DisneyDown.Common.ExternalRetrieval/DisneyDown.Common.ExternalRetrieval.csproj
@@ -51,6 +51,7 @@
     <Compile Include="ModuleInfrastructure\IExternalModule.cs" />
     <Compile Include="ModuleInfrastructure\Modules\MP4Decrypt.cs" />
     <Compile Include="ModuleInfrastructure\Modules\MP4Dump.cs" />
+    <Compile Include="ModuleRetrievalEndpointFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
